<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="io.inthelab.sampleproject.MainActivity">


    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_blue"
        android:onClick="onPhotosClicked"
        android:text="@string/photo_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonUsersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPhoto"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_pink"
        android:onClick="onUserListClicked"
        android:text="@string/user_list_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUsersList"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_orange"
        android:onClick="onLoginClicked"
        android:text="@string/login_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogIn"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_red"
        android:onClick="onAnimationClicked"
        android:text="@string/animation_button"
        android:textColor="@android:color/white" />

</RelativeLayout>
