<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".login.LogInActivity">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:inputType="textPersonName"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/usernameEditText"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_orange"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:onClick="onLoginClicked"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordEditText"
        android:text="@string/login_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
